--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "bootstrap-vue": "^2.16.0",
     "node-sass": "^4.14.1",
     "nuxt": "^2.14.0",
-    "sass-loader": "^10.0.2"
+    "sass-loader": "^10.0.2",
+    "vue-slick-carousel": "^1.0.6"
   },
   "devDependencies": {
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
