--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "node-sass": "^4.14.1",
     "nuxt": "^2.14.0",
     "sass-loader": "^10.0.2",
-    "vue-slick-carousel": "^1.0.6"
+    "vue-slick-carousel": "^1.0.6",
+    "vue2-animate": "^2.1.4"
   },
   "devDependencies": {
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
