--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "@nuxtjs/axios": "^5.12.0",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
     "bootstrap-vue": "^2.16.0",
+    "countup.js": "^2.0.7",
     "node-sass": "^4.14.1",
     "nuxt": "^2.14.0",
     "sass-loader": "^10.0.2",
+    "vue-countup-v2": "^4.0.0",
+    "vue-observe-visibility": "^0.4.6",
     "vue-slick-carousel": "^1.0.6",
     "vue2-animate": "^2.1.4"
   },
