--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "vue-countup-v2": "^4.0.0",
     "vue-observe-visibility": "^0.4.6",
     "vue-slick-carousel": "^1.0.6",
-    "vue2-animate": "^2.1.4"
+    "vue2-animate": "^2.1.4",
+    "vue2-smooth-scroll": "^1.5.0"
   },
   "devDependencies": {
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
