--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "vue-observe-visibility": "^0.4.6",
     "vue-slick-carousel": "^1.0.6",
     "vue2-animate": "^2.1.4",
-    "vue2-smooth-scroll": "^1.5.0"
+    "vue2-smooth-scroll": "^1.5.0",
+    "vuelayers": "^0.11.27"
   },
   "devDependencies": {
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
