--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "countup.js": "^2.0.7",
     "node-sass": "^4.14.1",
     "nuxt": "^2.14.0",
+    "nuxt-i18n": "^6.15.1",
     "sass-loader": "^10.0.2",
     "vue-countup-v2": "^4.0.0",
     "vue-observe-visibility": "^0.4.6",
