--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nuxtjs/pwa": "^3.0.0-beta.20",
     "bootstrap-vue": "^2.16.0",
     "countup.js": "^2.0.7",
+    "date-fns": "^2.16.1",
     "node-sass": "^4.14.1",
     "nuxt": "^2.14.0",
     "nuxt-i18n": "^6.15.1",
