--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     }
   },
   "dependencies": {
+    "@nuxt/content": "^1.9.0",
     "@nuxtjs/axios": "^5.12.0",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
     "bootstrap-vue": "^2.16.0",
