--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
     "build": "nuxt build",
-    "start": "nuxt start",
+    "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
@@ -27,8 +27,12 @@
     "@nuxtjs/pwa": "^3.0.0-beta.20",
     "bootstrap-vue": "^2.16.0",
     "countup.js": "^2.0.7",
+    "cross-env": "^7.0.2",
     "date-fns": "^2.16.1",
     "diacritics": "^1.3.0",
+    "express": "^4.17.1",
+    "express-validator": "^6.6.1",
+    "mongoose": "^5.10.9",
     "node-sass": "^4.14.1",
     "nuxt": "^2.14.0",
     "nuxt-i18n": "^6.15.1",
@@ -59,6 +63,7 @@
     "husky": "^4.2.5",
     "jest": "^26.5.0",
     "lint-staged": "^10.2.11",
+    "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
     "stylelint": "^13.6.1",
     "stylelint-config-prettier": "^8.0.2",
