--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "cross-env": "^7.0.2",
     "date-fns": "^2.16.1",
     "diacritics": "^1.3.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
     "mongoose": "^5.10.9",
     "node-sass": "^4.14.1",
+    "nodemailer": "^6.4.14",
     "nuxt": "^2.14.0",
     "nuxt-i18n": "^6.15.1",
     "sass-loader": "^10.0.2",
