--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
     "mongoose": "^5.10.9",
+    "multer": "^1.4.2",
     "node-sass": "^4.14.1",
     "nodemailer": "^6.4.14",
     "nuxt": "^2.14.0",
