--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "nuxt": "^2.14.0",
     "nuxt-i18n": "^6.15.1",
     "sass-loader": "^10.0.2",
+    "sharp": "^0.26.2",
     "vee-validate": "^3.4.1",
     "vue-countup-v2": "^4.0.0",
     "vue-observe-visibility": "^0.4.6",
