--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     }
   },
   "dependencies": {
-    "@nuxt/content": "^1.9.0",
+    "@nuxt/content": "^1.10.0",
     "@nuxtjs/axios": "^5.12.0",
-    "@nuxtjs/pwa": "^3.0.0-beta.20",
-    "bootstrap-vue": "^2.16.0",
+    "@nuxtjs/pwa": "^3.2.2",
+    "bootstrap-vue": "^2.18.1",
     "countup.js": "^2.0.7",
     "cross-env": "^7.0.2",
     "date-fns": "^2.16.1",
@@ -33,16 +33,16 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
-    "mongoose": "^5.10.9",
+    "mongoose": "^5.10.12",
     "multer": "^1.4.2",
     "node-sass": "^4.14.1",
     "nodemailer": "^6.4.14",
     "nodemailer-express-handlebars": "^4.0.0",
-    "nuxt": "^2.14.0",
-    "nuxt-i18n": "^6.15.1",
-    "sass-loader": "^10.0.2",
+    "nuxt": "^2.14.7",
+    "nuxt-i18n": "^6.15.4",
+    "sass-loader": "^10.0.5",
     "sharp": "^0.26.2",
-    "vee-validate": "^3.4.1",
+    "vee-validate": "^3.4.3",
     "vue-countup-v2": "^4.0.0",
     "vue-observe-visibility": "^0.4.6",
     "vue-slick-carousel": "^1.0.6",
@@ -58,18 +58,18 @@
     "@nuxtjs/eslint-module": "^2.0.0",
     "@nuxtjs/fontawesome": "^1.1.2",
     "@nuxtjs/stylelint-module": "^4.0.0",
-    "@vue/test-utils": "^1.0.3",
+    "@vue/test-utils": "^1.1.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.5.0",
-    "eslint": "^7.10.0",
-    "eslint-config-prettier": "^6.11.0",
+    "babel-jest": "^26.6.3",
+    "eslint": "^7.12.1",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-nuxt": "^1.0.0",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.2.5",
-    "jest": "^26.5.0",
-    "lint-staged": "^10.2.11",
-    "nodemon": "^2.0.4",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.1",
+    "nodemon": "^2.0.6",
     "prettier": "^2.0.5",
     "stylelint": "^13.6.1",
     "stylelint-config-prettier": "^8.0.2",
