--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server --watch api",
     "build": "nuxt build",
-    "heroku-postbuild": "npm run build",
+    "heroku-postbuild": "npm run generate",
     "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
@@ -23,27 +23,27 @@
     }
   },
   "dependencies": {
-    "@nuxt/content": "^1.10.0",
+    "@nuxt/content": "^1.11.1",
     "@nuxtjs/axios": "^5.12.0",
-    "@nuxtjs/pwa": "^3.2.2",
-    "bootstrap-vue": "^2.18.1",
+    "@nuxtjs/pwa": "^3.3.1",
+    "bootstrap-vue": "^2.19.0",
     "countup.js": "^2.0.7",
     "cross-env": "^7.0.2",
     "date-fns": "^2.16.1",
     "diacritics": "^1.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-validator": "^6.6.1",
-    "mongoose": "^5.10.12",
+    "express-validator": "^6.7.0",
+    "mongoose": "^5.10.18",
     "multer": "^1.4.2",
     "node-sass": "^4.14.1",
-    "nodemailer": "^6.4.14",
+    "nodemailer": "^6.4.16",
     "nodemailer-express-handlebars": "^4.0.0",
     "nuxt": "^2.14.7",
     "nuxt-i18n": "^6.15.4",
-    "sass-loader": "^10.0.5",
-    "sharp": "^0.26.2",
-    "vee-validate": "^3.4.3",
+    "sass-loader": "^10.1.0",
+    "sharp": "^0.26.3",
+    "vee-validate": "^3.4.5",
     "vue-countup-v2": "^4.0.0",
     "vue-observe-visibility": "^0.4.6",
     "vue-slick-carousel": "^1.0.6",
@@ -63,16 +63,16 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
-    "eslint": "^7.12.1",
+    "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-nuxt": "^1.0.0",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.2.5",
     "jest": "^26.6.3",
-    "lint-staged": "^10.5.1",
+    "lint-staged": "^10.5.2",
     "nodemon": "^2.0.6",
-    "prettier": "^2.0.5",
-    "stylelint": "^13.6.1",
+    "prettier": "^2.2.1",
+    "stylelint": "^13.8.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
     "vue-jest": "^3.0.4"
