--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nuxt/content": "^1.11.1",
     "@nuxtjs/axios": "^5.12.5",
     "@nuxtjs/pwa": "^3.3.3",
+    "@nuxtjs/sitemap": "^2.4.0",
     "bootstrap-vue": "^2.21.2",
     "countup.js": "^2.0.7",
     "cross-env": "^7.0.3",
