--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "nodemailer-express-handlebars": "^4.0.0",
     "nuxt": "^2.15.2",
     "nuxt-i18n": "^6.20.4",
+    "nuxt-lazy-load": "^1.2.5",
     "sass-loader": "^10.1.1",
     "sharp": "^0.27.2",
     "vee-validate": "^3.4.5",
