--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server --watch api",
     "build": "nuxt build",
+    "e2e": "cypress open",
+    "e2e-run": "cypress run",
+    "start:e2e": "start-server-and-test dev http://localhost:3000 e2e",
+    "test:e2e": "start-server-and-test dev http://localhost:3000 e2e-run",
     "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
@@ -64,6 +68,7 @@
     "cypress": "^6.7.1",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "husky": "^5.1.3",
@@ -71,6 +76,7 @@
     "lint-staged": "^10.5.4",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
+    "start-server-and-test": "^1.12.0",
     "stylelint": "^13.12.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^21.0.0",
