--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "nuxt build",
     "e2e": "cypress open",
     "e2e-run": "cypress run",
-    "start:e2e": "start-server-and-test dev http://localhost:3000 e2e",
-    "test:e2e": "start-server-and-test dev http://localhost:3000 e2e-run",
+    "start:e2e": "server-test dev 3000 e2e",
+    "test:e2e": "server-test dev 3000 e2e-run",
     "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
